--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc && nodemon dist/app.js",
+    "dev": "tsc && node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsLint": "./node_modules/.bin/tslint  src --ext .ts",
     "fixTsLint": "./node_modules/.bin/tslint --project *.ts"
@@ -19,7 +19,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^1.19.1",
     "socket.io": "^2.2.0"
   }
 }
