--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "tsc && ts-node app.ts",
     "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsLint": "./node_modules/.bin/tslint  src --ext .ts",
-    "fixTsLint": "./node_modules/.bin/tslint --project *.ts"
+    "tsLint": "./node_modules/.bin/tslint src/**/*.ts{,x}",
+    "fixTsLint": "./node_modules/.bin/tslint --fix src/**/*.ts{,x}"
   },
   "author": "",
   "license": "ISC",
