--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ts-node": "^8.3.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^2.2.0"
