setup mongodb configuration

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 dist/
 # node_modules folder
 node_modules/
+# Cache
+Cache/
+# storage.json file
+storage.json
+# Network file
+Network Persistent State
