--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.2.7",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^2.2.0"
   },
   "nodemonConfig": {
